This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-07-16:

- The history expansion character ('!' by default) is now not processed when
  immediately following '${'. This makes it psosible to use expansion syntax
  like ${!varname} and ${!prefix@} on the interactive command line with the
  histexpand option on; these no longer trigger an "event not found" error.

2024-07-13:

- The shell is now capable of handling more than 32767 simultaneous
  background jobs, subject to system limitations.

2024-07-02:

- Release 1.0.9.

- Support for UNC paths (//server/dir) is now enabled by default on Cygwin.

2024-06-30:

- Fixed: the 'hash' and 'alias -t' commands no longer autoload functions
  from executable files on FPATH as an unintended side effect.

2024-06-27:

- Fixed: a builtin activated with the 'builtin' command was not found if
  invoked within a namespace block on the same line as the 'builtin' command.

2024-06-26:

- Fixed: when the --showme option was used with a command containing multiple
  redirections, only the first redirection was shown, without a newline. This
  bug was introduced along with --showme in ksh 93s- 2006-09-12.

2024-03-05:

- Fixed a corner case bug causing incorrect field splitting behaviour of a
  repeated whitespace character in the IFS variable. The behaviour was
  incorrect when the posix option was changed while xtrace was on, or when a
  shell discipline function was defined for IFS. Bug introduced on 2022-03-05.

2024-03-03:

- Fixed incorrect behaviour of {n1..n2..incr} range brace expansions, which
  sometimes occurred if the value of n1 multiplied by incr falls outside of
  the INT_MIN..INT_MAX range. For instance, {1696512000..1696512000..300}
  now correctly outputs only 1696512000.

2024-03-30:
